--- a/reporter/templates/report.tmpl
+++ b/reporter/templates/report.tmpl
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Immo Scraper Report</title>
+    <title>{{ data.subject }}</title>
     <style type="text/css">
       span.bold {font-weight: bold;}
       table.noborder {border: 0px; padding: 8px;}
