--- a/reporter/templates/report.tmpl
+++ b/reporter/templates/report.tmpl
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>{{ data.subject }}</title>
-    <style type="text/css">
-      span.bold {font-weight: bold;}
-      table.noborder {border: 0px; padding: 8px;}
-      th {text-align: left;}
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
+</head>
   </head>
   <body>
     <p>
       Hallo {{ data.name }},
     </p>
-
     <p>
-        {{ msg }}
+        Es gibt folgende neuen Inserate. Viel Spaß!
     </p>
     
+    {% for entry in data.entries %}
     <p>
-      -- <br />
+        <h3>{{ entry.title }}</h3>
+        Preis: {{ entry.price }}
+        <a href="http://google.com" class="ui medium image">
+            <img src="{{ entry.picture_url }}">
+        </a>
+    </p>
+    {% endfor %}
+
+
+    <p>
+      ---- <br />
     </p>
   </body>
 </html>
