--- a/reporter/templates/report.tmpl
+++ b/reporter/templates/report.tmpl
@@ -53,9 +53,9 @@
     </p>
     {% endfor %}
 
-
     <p>
-      ---- <br />
+        <i class="big home icon"></i>
+        Erstellt am {{ data.now().strftime('%d.%m.%Y um %H:%M:%S') }}. <br />
     </p>
   </body>
 </html>
